--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ border-top: 8px solid rgb(72, 230, 101);
  dark-blue ; */
 
 header h1{
-
+/* font: 40px; */
     margin: 0;
     padding: 10px 20px;
     /* padding: 50px; */
@@ -57,17 +57,21 @@ nav ul li {
 }
 
 main{
+    border-bottom:5px solid rgb(102, 221, 78);
+    background-color: rgb(240, 249, 118);
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* header{
+    background-color: rgb(251, 133, 224);
+} */
 
 
-
-.footer {
+footer {
     padding: 30px;
-    clear: both;
+    /* clear: both; */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
@@ -82,14 +86,45 @@ main{
 footer{
     height: 100px;
     margin-top: 0;
+    /* margin-bottom: 10px; */
     background-color: rgb(251, 133, 224);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 7px;
-    border-bottom: 8px solid rgb(72, 230, 101);
+    border-bottom: 8px solid rgb(70, 236, 100);
     font-size: 20px;
-    border-top: 8px solid rgb(72, 230, 101);
+    border-top: 0px solid rgb(72, 230, 101);
+    list-style: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
     }
     
 
+/* #dog{
+    width: 82px;
+    height: 111px; */
+
+
+
+#projects{
+    background-color: aquamarine;
+}
+
+#me{
+    width: 114px;
+    height: 158px;
+}
+
+#project1{
+    width: 112px;
+    height: 115px;
+    margin: 20px 20px 28px 273px;
+} 
+
+
+#project2{
+    width: 202px;
+    height:101px;
+    margin: -382px -9px 8px 408px;
+}
