--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,9 @@ footer{
 
     }
     
-
+footer ul{
+    list-style: none;
+}
 /* #dog{
     width: 82px;
     height: 111px; */
@@ -112,19 +114,40 @@ footer{
 }
 
 #me{
-    width: 114px;
-    height: 158px;
+    width: 185px;
+    height: 240px;
+    float: right;
 }
 
 #project1{
-    width: 112px;
-    height: 115px;
-    margin: 20px 20px 28px 273px;
+    width: 287px;
+    height: 195px;
+    /* margin: 20px 20px 28px 273px; */
 } 
 
 
 #project2{
-    width: 202px;
-    height:101px;
-    margin: -382px -9px 8px 408px;
+    width: 290px;
+    height: 199px;
+    /* margin: -369px 4px 79px 595px; */
+    /* float:right 20px; */
+}
+
+#aboutme{
+    /* border: 10px;
+  /* padding: 10px;   */
+  margin: -16px 2px 26px 14px;
+  background-color: rgb(240, 163, 75);
+  /* height: 100px; */
+}
+
+/* li{
+    margin: 20px;
+    padding:10px;
+    border: 20px;
+} */
+
+article{
+    display: flex;
+    justify-content: space-evenly;
 }
